# HiCC

./: .gitignore  CMakeLists.txt  HiCC.sln  README.md
RESOURCES/: icon.kra
SRC/: bmutils.cpp  bmutils.h  clrkmeans.c  clrkmeans.h  clrpicker.c  clrpicker.h  clrregistry.c  clrregistry.h  controls.c  controls.h  dlgabout.c  hicc.manifest  registry.c  registry.h  resource.h  resource.rc  resources.h  resources.rc  syscolors.h  wallpaper.c  wallpaper.h  wndcenter.h  wndmain.c
SRC/RES/: README.md  eyedropper.ico.kra  hicc.manifest  resources.rc
